# Apple_in_my_eyes

./: README.md  usb_task.c  usb_task.h  单雷达导航实车配置指南.md
interfaces/pb_rm_interfaces/: CMakeLists.txt
interfaces/pb_rm_interfaces/msg/: SentryCmd.msg
interfaces/pb_rm_interfaces/msg/referee/: Buff.msg  GameRobotHP.msg  SentryInfo.msg
pb2025_robot_description/launch/: robot_description_launch.py
pb2025_robot_description/resource/xmacro/: lf2026_old_sentry.sdf.xmacro  lf2026_sentry_robot.sdf.xmacro  map2nav.sdf.xmacro  pb2025_sentry_robot.sdf.xmacro
pb2025_sentry_behavior/: CMakeLists.txt  README.md  SMART_PICKING_PLAN.zh.md  dependencies.repos  package.xml
pb2025_sentry_behavior/behavior_trees/: Project.btproj  models.xml  rmuc_2026.xml  rmul_2025.xml  rmul_2026.xml  rmul_2026_rush.xml  smarthome.xml  tmp.xml
pb2025_sentry_behavior/include/pb2025_sentry_behavior/: custom_types.hpp  pb2025_sentry_behavior_server.hpp
pb2025_sentry_behavior/include/pb2025_sentry_behavior/plugins/action/: calculate_chase_goal.hpp  exchange_projectile_once.hpp  pub_nav2_goal.hpp  set_sentry_cmd.hpp
pb2025_sentry_behavior/include/pb2025_sentry_behavior/plugins/condition/: can_free_respawn.hpp  is_attack_state.hpp  is_dead.hpp  is_detect_enemy.hpp  is_goal_reached_by_odom.hpp  is_gold_coin_enough.hpp  is_hp_decreased.hpp  is_hp_less_than.hpp  is_target_detected.hpp
pb2025_sentry_behavior/launch/: pb2025_sentry_behavior_launch.py
pb2025_sentry_behavior/params/: sentry_behavior.yaml
pb2025_sentry_behavior/plugins/action/: calculate_chase_goal.cpp  exchange_projectile_once.cpp  pub_nav2_goal.cpp  send_nav2_goal.cpp  set_sentry_cmd.cpp
pb2025_sentry_behavior/plugins/condition/: can_free_respawn.cpp  is_attack_state.cpp  is_dead.cpp  is_detect_enemy.cpp  is_goal_reached_by_odom.cpp  is_gold_coin_enough.cpp  is_hp_decreased.cpp  is_hp_less_than.cpp  is_rfid_detected.cpp  is_status_ok.cpp  is_target_detected.cpp
pb2025_sentry_behavior/src/: pb2025_sentry_behavior_client.cpp  pb2025_sentry_behavior_server.cpp  smart_picking_manager.cpp
pb2025_sentry_nav/: README.md
pb2025_sentry_nav/livox_ros_driver2/config/: MID360_config.json  mixed_HAP_MID360_config.json
pb2025_sentry_nav/livox_ros_driver2/launch/: msg_MID360_launch.py  rviz_MID360_launch.py
pb2025_sentry_nav/livox_ros_driver2/src/: lddc.cpp  lddc.h
pb2025_sentry_nav/loam_interface/: package.xml
pb2025_sentry_nav/loam_interface/include/loam_interface/: loam_interface.hpp
pb2025_sentry_nav/loam_interface/src/: loam_interface.cpp
pb2025_sentry_nav/merge_cloud/: CMakeLists.txt  Combine.cpp  package.xml
pb2025_sentry_nav/merge_cloud/config/: merge_config.yaml
pb2025_sentry_nav/pb2025_nav_bringup/behavior_trees/: navigate_through_poses_w_replanning_and_recovery.xml
pb2025_sentry_nav/pb2025_nav_bringup/config/reality/: mid360_user_config.json  nav2_params.yaml  nav2_params0.yaml
pb2025_sentry_nav/pb2025_nav_bringup/launch1/: localization_launch.py  navigation_launch.py  robot_state_publisher_launch.py
pb2025_sentry_nav/pb2025_nav_bringup/rviz/: nav2_default_view.rviz
pb2025_sentry_nav/pb_cuda_pointcloud/: CMakeLists.txt  package.xml
pb2025_sentry_nav/pb_cuda_pointcloud/cuda/: pointcloud_kernels.cu
pb2025_sentry_nav/pb_cuda_pointcloud/include/pb_cuda_pointcloud/: pointcloud_accel.hpp
pb2025_sentry_nav/pb_cuda_pointcloud/src/: cuda_api.hpp  pointcloud_accel.cpp
pb2025_sentry_nav/point_lio/: CMakeLists.txt  package.xml
pb2025_sentry_nav/point_lio/src/: Estimator.cpp  laserMapping.cpp  li_initialization.cpp  parameters.cpp  parameters.h  preprocess.cpp  preprocess.h
pb2025_sentry_nav/pointcloud_to_laserscan/: package.xml
pb2025_sentry_nav/pointcloud_to_laserscan/include/pointcloud_to_laserscan/: pointcloud_to_laserscan_node.hpp
pb2025_sentry_nav/pointcloud_to_laserscan/src/: pointcloud_to_laserscan_node.cpp
pb2025_sentry_nav/sensor_scan_generation/: package.xml
pb2025_sentry_nav/sensor_scan_generation/include/sensor_scan_generation/: sensor_scan_generation.hpp
pb2025_sentry_nav/sensor_scan_generation/src/: sensor_scan_generation.cpp
pb2025_sentry_nav/terrain_analysis/: CMakeLists.txt  package.xml
pb2025_sentry_nav/terrain_analysis/src/: terrainAnalysis.cpp
pb2025_sentry_nav/terrain_analysis_ext/: CMakeLists.txt  package.xml
pb2025_sentry_nav/terrain_analysis_ext/src/: terrainAnalysisExt.cpp
pb2025_sentry_nav/waypoint_editor/.github/workflows/: humble_build.yml  jazzy_build.yml
robot_serial_comm/: CMakeLists.txt  LOWER_CONTROLLER_PROTOCOL.zh.md  README.md  package.xml
robot_serial_comm/config/: robot_serial_comm.yaml
robot_serial_comm/include/robot_serial_comm/: crc16.hpp  protocol.hpp  serial_bridge.hpp
robot_serial_comm/launch/: robot_serial_comm.launch.py
robot_serial_comm/src/: crc16.cpp  robot_serial_comm_node.cpp  serial_bridge.cpp
smarthome_vision_ros2/: CMakeLists.txt  README.md  colcon_build_nuc.sh  package.xml  test_last_onnx.py
smarthome_vision_ros2/assets/last_openvino_model/: last.xml  metadata.yaml
smarthome_vision_ros2/config/: vision.yaml
smarthome_vision_ros2/include/smarthome_vision/: detector.hpp  inference_backend.hpp  openvino_detector.hpp  pose_solver.hpp  protocol.hpp  trt_detector.hpp  types.hpp
smarthome_vision_ros2/launch/: vision.launch.py
smarthome_vision_ros2/msg/: DetectedTarget.msg
smarthome_vision_ros2/src/: detector.cpp  openvino_detector.cpp  pose_solver.cpp  trt_detector.cpp  vision_node.cpp
standard_robot_pp_ros2/: CMakeLists.txt
standard_robot_pp_ros2/include/standard_robot_pp_ros2/: packet_typedef.hpp  standard_robot_pp_ros2.hpp
standard_robot_pp_ros2/launch/: standard_robot_pp_ros2.launch.py
standard_robot_pp_ros2/src/: standard_robot_pp_ros2.cpp  test_sentry_cmd.cpp
tools/pcd2pgm/: CMakeLists.txt  package.xml
