<?xml version="1.0"?>
<package format="3">
  <name>pb_cuda_pointcloud</name>
  <version>0.1.0</version>
  <description>Optional CUDA point cloud helpers for Jetson Orin NX navigation.</description>

  <maintainer email="dev@local">lf_sentry</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>eigen</depend>
  <depend>livox_ros_driver2</depend>
  <depend>libpcl-all-dev</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
